--- a/6.tex
+++ b/6.tex
@@ -4,7 +4,8 @@
 \usepackage{amssymb, amsmath, amsthm}
 \usepackage{graphics, graphicx}
 \pagestyle{empty}
-\newtheorem{claim}{Claim}
+\newtheorem{lemma}{Lemma}
+\newtheorem{thm}{Theorem}
 
 \begin{document}
 \textbf{Chapter 6 solutions  \hfill Hanna Gábor}\\
@@ -37,33 +38,46 @@ $v(A)$ changed by $\alpha (R_{t + 1} + \gamma V(S_{t + 1}) - V(S_t)) = 0.1 * (-1
 \item
 
 \item
-For now, let us treat the terminal points as states with values $0$ and $1$ respectively
-and all the rewards to be $0$. This doesn't change the updates, but makes the
-notation a bit easier.
+For now, let us treat the terminal points as states with values $0$ and $1$,
+respectively. Let all the rewards be $0$. These changes together don't change
+the updates, but make the notation a bit easier. For a state $S \neq C$ let
+$S_i$ denote the neighbor of $C$ which is closer to $C$ and $S_o$ denote the
+neighbor of $S$ which is further from $C$. Let $V_t(S)$ denote the estimate of
+$V(S)$ in time step $t$.
 
-\begin{claim}
+For state $C$, the expected estimated value is $0.5$ by symmetry. We will prove
+the following theorem.
+\begin{thm}\label{thm}
+  Let $S$ be any state in $\{A, B, D, E\}$. Suppose we are in state $S$ in
+  time step $t$. Suppose also that
+  \[(1 - \alpha) |V_t(S_t) - V_{t - 2} (S_i)| < |V_{t - 2}(S_o)) - V_t(S_t)|.\] Then
+  $|\mathbb{E}(V_{t + 1}(S_t)) - V_{t}(S_o)| < |V_t(S_t) - V_{t}(S_o)|$.
+\end{thm}
+
+For proving the theorem we need a few lemmas.
+
+\begin{lemma}
   If all the state values are initialized to $0.5$, then
-  \[0 \le V(A) \le V(B) \le V(C) \le V(D) \le V(E) \le 1\] holds throughout the
+  \[0 \le V_t(A) \le V_t(B) \le V_t(C) \le V_t(D) \le V_t(E) \le 1\] holds throughout the
   run of the TD algorithm.
-\end{claim}
+\end{lemma}
 \begin{proof}
   The proof goes by induction on the number of steps. The statement clearly holds
-  in the beginning. Suppose you are in state $S$ and take a step
-  to the right, arriving to $S'$. The updated $V(S)$ then equals to
-  \[(1 - \alpha) V(S) + \alpha V(S') \le (1 - \alpha) V(S') + \alpha V(S') = V(S').\]
+  in the beginning. Suppose you are in state $S$ at time $t$ and take a step
+  to the right, arriving to $S'$. Then $V_{t + 1}(S)$ equals to
+  \[(1 - \alpha) V_t(S) + \alpha V_t(S') \le (1 - \alpha) V_t(S') + \alpha V_t(S') = V_t(S') = V_{t + 1}(S').\]
+  If you step to the left, then
+  \[(1 - \alpha) V_t(S) + \alpha V_t(S') \ge (1 - \alpha) V_t(S') + \alpha V_t(S') = V_t(S') = V_{t + 1}(S').\]
 \end{proof}
 
-For the following claims for a state $S \neq C$ let $S_i$ and $S_o$ denote $S$'s
-neighbor closer to $C$ and further from $C$, respectively.
-
-\begin{claim}
+\begin{lemma}
   Let $S$ be any state in $\{A, B, D, E\}$. Suppose we are in state $S$ in
   time step $t$ and the previous state was $S_i$. Then
   $|\mathbb{E}(V_{t + 1}(S_t)) - V_{t}(S_o)| < |V_t(S_t) - V_{t}(S_o)|$ if and only if
   \[
-  (1 - \alpha) |V_t(S_t) - V_{t - 1} (S_i)| < |V_t(S_o)) - V_t(S_t)|
+  (1 - \alpha) |V_t(S_t) - V_{t - 1} (S_i)| < |V_t(S_o)) - V_t(S_t)|.
   \]
-\end{claim}
+\end{lemma}
 \begin{proof}
   Using the update rule $ V_t(S_i) = (1 - \alpha) V_{t - 1}(S_i) + \alpha V_{t - 1}(S_t)$
   and $V_{t - 1}(S_t) = V_t(S_t)$ the following holds.
@@ -75,18 +89,24 @@ neighbor closer to $C$ and further from $C$, respectively.
   & = V_t(S_t) + \frac{\alpha}{2} \Big(((1 - \alpha) \big(V_{t - 1}(S_i) - V_t(S_t)\big)
   + \big(V_t(S_o)) - V_t(S_t)\big)\Big)
   \end{align*}
+  Hence
+  \[|\mathbb{E}(V_{t + 1}(S_t)) - V_{t}(S_o)| < |V_t(S_t) - V_{t}(S_o)|\]
+  holds if and only if
+  \[|(1 - \alpha) \big(V_{t - 1}(S_i) - V_{t}(S_t)\big)| < |V_t(S_o)) - V_t(S_t)|.\]
 \end{proof}
 
 Note that if $S_t \in \{A, E\}$, then $S_{t - 1} = S_i$.
 
-\begin{claim}
+\begin{lemma}
   Let $S$ be a state in $\{B, D\}$. Suppose we are in state $S$ in
   time step $t$ and the previous state was $S_o$. Then
   $|\mathbb{E}(V_{t + 1}(S_t)) - V_{t - 2}(S_o)| < |V_{t - 2}(S_t) - V_{t - 2}(S_o)|$
   if and only if
   \[
+  |V_{t - 2}(S_t) - V_{t - 2}(S_i)| <
+  |((1 - \alpha)^2 - \alpha + 2)(V_{t - 2}(S_o) - V_{t - 2}(S_t))|
   \]
-\end{claim}
+\end{lemma}
 \begin{proof}
   First note that $S_{t - 2} = S_t$ and $S_{t - 1} = S_o$. We will use the update rules
   $V_t(S_o) = (1 - \alpha) V_{t - 1}(S_o) + \alpha V_{t - 1}(S_t)$ and
@@ -117,8 +137,20 @@ Note that if $S_t \in \{A, E\}$, then $S_{t - 1} = S_i$.
 + \big(((1 - \alpha)^2 - \alpha + 2)(V_{t - 2}(S_o) - V_{t - 2}(S_t))\big)\Big)\\
 %
   \end{align*}
+  Hence
+  \[|\mathbb{E}(V_{t + 1}(S_t)) - V_{t - 2}(S_o)| < |V_{t - 2}(S_t) - V_{t - 2}(S_o)|\]
+  holds if and only if
+  \[|V_{t - 2}(S_i) - V_{t - 2}(S_t)|
+  + ((1 - \alpha)^2 - \alpha + 2)|(V_{t - 2}(S_o) - V_{t - 2}(S_t))| > 0
+  \]
 \end{proof}
 
+\begin{proof}[Proof of Theorem \ref{thm}]
+  $((1 - \alpha)^2 - \alpha + 2) = 3 - 3\alpha + \alpha^2 \le \frac{1}{1 - \alpha}$.
+  \[(3 - 3\alpha + \alpha^2)(1 - \alpha) \le 1\]
+  \[3 - 6\alpha - 2\alpha^2 + \alpha^3\]
+
+\end{proof}
 
 \end{enumerate}
 \end{document}
