--- a/2.tex
+++ b/2.tex
@@ -128,5 +128,19 @@
   Hence, the coefficient of $R_i$ is smaller than $(1 - \alpha)^{n - i}$, hence this is
   recency-weighted average.
 
+\item
+  \textit{UCB Spikes. In Figure 2.4 the UCB algorithm shows a distinct spike
+  in performance on the 11th step. Why is this? Note that for your answer to be fully
+  satisfactory it must explain both why the reward increases on the 11th step and why it
+  decreases on the subsequent steps. Hint: If c = 1, then the spike is less prominent.}
+
+  Same as in exercise $2.6$: With very high probability, the first $10$ choices will cover all the possible actions
+  once, because the optimal starting values dominate the estimated action values.
+  After the $10^{th}$ action, we have an estimation of the action values based
+  on actually trying them, but the optimal starting value still dominates these estimates.
+  The $11^{th}$ step is thus chosen based on the rewards, not on the optimisic starting values,
+  this causes a big spike at step $11$. In steps $11-20$ (with high probability) we will
+  choose all the actions once, starting with the action that has the highest estimated
+  action value and continuing in this order.
 \end{enumerate}
 \end{document}
